<resources>
    <string name="app_name">Budzik</string>
    <string name="cancel_button">Anuluj</string>
    <string name="save_button">Zapisz</string>
    <string name="nap_text_view">Drzemka:</string>
    <string name="volume">Głośność</string>
    <string name="vibration">Wibracja</string>
    <string name="delete">Usuń</string>
    <string name="nap">DRZEMKA</string>
    <string name="turn_off_the_alarm">Wyłącz alarm</string>
    <string name="title">Budzik</string>
    <string name="safe_alarm_launch_descrption">Bezpieczny alarm:</string>
    <string name="header_text_in_safe_alarm">Twój alarm może się nie włączyć o</string>
    <string name="ok_button">OK</string>
    <string name="left_word">Pozostało</string>
    <string name="battery_word">baterii</string>
    <string name="add_single_alarm">Dodaj alarm</string>
    <string name="add_group_alarm">Stwórz alarm grupowy</string>
    <string name="bin_button_title">BinButton</string>
    <string name="group_alarm">Grupa</string>
    <string name="select_alarm_type">Wybierz typ alarmu</string>
    <string name="name_is_required">Nazwa jest wymagana</string>
    <string name="error_connecting_to_database">Błąd łączenia z bazą danych</string>
    <string name="optional">Opcjonalne</string>
    <string name="edit_button_title">EditButton</string>
    <string name="update_group_alarm_title">Zaktualizauj alarm grupowy</string>
    <string name="safe_alarm_launch_time_description">Czas do włączenia bezpiecznego alarmu</string>

    <string-array name="nap_values">
        <item>1 minuta</item>
        <item>2 minuty</item>
        <item>3 minuty</item>
        <item>4 minuty</item>
        <item>5 minut</item>
    </string-array>
</resources>