<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:background="@drawable/add_group_alarm_dialog_background"
    android:padding="16dp">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_group_alarm"
        android:textSize="24sp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nazwa*:"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"/>

        <EditText
            android:id="@+id/group_alarm_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"
            android:minWidth="200dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Opis:"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="26dp"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/group_alarm_note_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"
            android:hint="@string/optional"
            android:minWidth="200dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="18dp">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_blue"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_blue"
            android:layout_marginLeft="35dp"
            android:text="@string/save_button" />
    </LinearLayout>

</LinearLayout>