<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_constraint_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.main.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@android:color/white"
        tools:ignore="MissingConstraints" />

    <ListView
        android:id="@+id/alarm_list_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="1dp"/>

    <FrameLayout
        android:id="@+id/full_screen_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/scrimBackground"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        android:elevation="2dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_alarm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="?attr/colorPrimary"
        android:contentDescription="+"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="3dp"/>

    <LinearLayout
        android:id="@+id/add_single_or_group_alarm_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="right"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/add_alarm_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="3dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_group_alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/main_blue"
            android:text="@string/add_group_alarm"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_single_alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/main_blue"
            android:text="@string/add_single_alarm"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cancel_or_delete_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="right"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:elevation="1dp"
        android:layout_marginBottom="30dp"
        android:paddingRight="10dp">
        <Button
            android:id="@+id/cancel_delete_alarm_button"
            android:text="@string/cancel_button"
            android:backgroundTint="@color/main_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/delete_alarm_button"
            android:text="@string/delete"
            android:backgroundTint="@color/main_blue"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>